--- a/specs/v03.md
+++ b/specs/v03.md
@@ -1,6 +1,24 @@
 Cordova TCP Socket Plugin v0.3.x release notes
 ==============================================
 
+## v0.3.1 - Changelog
+
+### Breaking changes
+* connectionId: connect method returns an id for the opened socket. This id must be used as connection reference for disconnect, send, receive and isConnected methods.
+* isConnected: after calling connect, that does not mean the connection will be opened right on time. it takes some miliseconds, which can be painful for your app. So, the isConnected method was made as first workaround to check connectivity before doing something stupid (which is allowed by current plugin implementation). I'm looking forward about opening the connection and return the success callback only after having some return from target host. Probably, talking about v0.4 release.
+
+
+### Fixed issues
+* socket event handling for ios: [#14](http://github.com/Tlantic/cdv-socket-plugin/issues/14)
+* invalid socke tbeing stored in conenction pool: [#15](http://github.com/Tlantic/cdv-socket-plugin/issues/15)
+* iOS buffer size issues: [#32](http://github.com/Tlantic/cdv-socket-plugin/issues/32)
+* single quote issues: [#34](http://github.com/Tlantic/cdv-socket-plugin/issues/34)
+* data trunctation problems: [#44](http://github.com/Tlantic/cdv-socket-plugin/issues/44)
+
+### New features / Improvements
+* implemented isConnected method
+
+
 ## v0.3.0
 
 This is the third version of the plugin, with few support to attend basic needs regarding Windows8 platform.
